simplify spacing function by removing behavior which is no longer relevant

--- a/static/scpc/scss/modules/_functions.scss
+++ b/static/scpc/scss/modules/_functions.scss
@@ -32,9 +32,5 @@
 //   $ratio: An optional multiplier by which the spacing will be decreased or increased
 //   $reduce-by: A length (assumed rems) by which the calculated spacing should be reduced
 @function spacing-y($y: 0, $ratio: 1, $reduce-by: 0) {
-  $factor: 2 / $ratio;
-  @if $factor > $y {
-    @error "Space cannot be reduced by a factor less than " + 2rem / $y;
-  }
-  @return ($y / $factor - $reduce-by / 2);
+  @return ($y * $ratio / 2 - $reduce-by / 2);
 }
